--- a/project/filter.html
+++ b/project/filter.html
@@ -1,30 +1,21 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Job listing</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="filter.js"></script>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Frontend Mentor | Job Listings</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <div class="container">
-        <div class="header"></div>
-        <div class="search_wrap">
-            <div class="search">
-                <div id="search_items"></div>
-                <span id="btn_clear">Clear</span>
-            </div>
-        </div>
-        <div class="content">
-            <div class="wrap" id="wrap">
-                <!-- 동적생성 -->
-            </div>
-        </div>
+<header></header>
+<main>
+    <div class="filter hidden">
+        <div class="items"></div>
+        <button class="clear">Clear</button>
     </div>
+    <div class="job-list"></div>
+</main>
+
+<script src="index.js" type="module"></script>
 </body>
 </html>
